[package]
name = "mlzlog"
version = "0.5.2"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "A collection of log4rs tools to log like the mlzlog Python package"
repository = "https://github.com/birkenfeld/mlzlog-rs"
documentation = "http://docs.rs/mlzlog"
keywords = ["logging", "mlz", "colored", "rolling"]
edition = "2018"

[dependencies]
log = "0.4.8"
log-mdc = "0.1.0"
time = "0.1.42"
hashbrown = "0.7.0"
ansi_term = "0.12.1"
parking_lot = "0.9.0"  # 1.34.2
systemd = { version = "0.4.0", optional = true }

[dependencies.log4rs]
version = "0.11"
default-features = false
features = ["pattern_encoder", "simple_writer"]
