[package]
name = "mlzlog"
version = "0.6.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "A collection of log4rs tools to log like the mlzlog Python package"
repository = "https://github.com/birkenfeld/mlzlog-rs"
documentation = "http://docs.rs/mlzlog"
keywords = ["logging", "mlz", "colored", "rolling"]
edition = "2018"

[dependencies]
log = "0.4.8"
log-mdc = "0.1.0"
time = "0.1.42"
anyhow = "1.0"
hashbrown = "0.9.0"
ansi_term = "0.12.1"
parking_lot = "0.11.0"
systemd = { version = "0.8.0", optional = true }

[dependencies.log4rs]
version = "1.0"
default-features = false
features = ["pattern_encoder", "simple_writer"]
