[package]
name = "mlzlog"
version = "0.7.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
description = "A collection of log4rs tools to log like the mlzlog Python package"
repository = "https://github.com/birkenfeld/mlzlog-rs"
documentation = "http://docs.rs/mlzlog"
keywords = ["logging", "mlz", "colored", "rolling"]
rust-version = "1.63"
edition = "2021"

[dependencies]
log = "0.4.8"
log-mdc = "0.1.0"
time = { version = "=0.3.20", features = ["local-offset", "formatting"] }
anyhow = "1.0"
hashbrown = "0.13.0"
ansi_term = "0.12.1"
parking_lot = "0.12.0"
systemd = { version = "0.10.0", optional = true }
once_cell = "1.18.0"

[dependencies.log4rs]
version = "1.0"
default-features = false
features = ["pattern_encoder", "simple_writer"]
